# message-board

./: .env_sample  .flake8  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml
addboards/: admin.py  apps.py  models.py  paginations.py  serializers.py  urls.py  views.py
addboards/migrations/: 0001_initial.py
addboards/tests/: test_ads.py
config/: settings.py  urls.py
users/: admin.py  models.py  permissions.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py
